--- a/index.html
+++ b/index.html
@@ -1,29 +1,67 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head>
-  <meta charset="UTF-8">
-  <title>The Word Guess Game</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <head>
+    <meta charset="UTF-8">
+    <title>Testing Grounds</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <style>
+      #my-container{
+        margin: 100px auto;
+        width: 500px;
+        height: 400px;
+        border: 1px solid black;
+        border-radius: 10px;
+      }
+      #my-header{
+        border-top-left-radius: 6px;
+        border-top-right-radius: 6px;
+        height: 100px;
+        width: 100%;
+        background: black;
+      }
+    </style>
+  </head>
+  <body>
+    <div id='my-container'>
+      <div id='my-header'>
+        header
+      </div>
+        This is my own creation of a bootstrap card-body
+    </div>
 
-</head>
+    <div class='card' style='width:300px;margin:auto;'>
+      <div class='card-header' style='background: gray;color: white;'>
+        header
+      </div>
+      <div class='card-body'>
+      <div class='card-text'>this is a bootstrap card</div>
+      <div class='btn btn-primary' id='firebaseButton'>firebase!!</div>
 
-<body onload="displayScreen()">
+      </div>
+    </div>
 
-  <div class="container p-0 ">
-    <h1>The Word Guess Game</h1>
-   
-    <p id="directions-text">Guess what word I am thinking of!</p>
-    <p id ="screen-display"></p>
-    <p id="wins-text"></p>
-    <p id="losses-text"></p>
-    <p id="chance-text"></p>
-    <p id="myoptions-text"></p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-  </div>
+    <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase.js"></script>
+    <script>
+            // Initialize Firebase
+            var config = {
+        apiKey: "AIzaSyCwPxBX3hj5IqBHag0EN_a4WcZq1y1ljbQ",
+        authDomain: "test-project-1-ab167.firebaseapp.com",
+        databaseURL: "https://test-project-1-ab167.firebaseio.com",
+        projectId: "test-project-1-ab167",
+        storageBucket: "test-project-1-ab167.appspot.com",
+        messagingSenderId: "1086130609284"
+      };
+      firebase.initializeApp(config);
 
-  <script type="text/javascript" src="game.js"></script>
-
-</body>
-
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+  </body>
 </html>
