--- a/index.html
+++ b/index.html
@@ -42,26 +42,9 @@
     </div>
 
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
 <!-- This is a new comment -->
 <!-- other one changed -->
-=======
-<!-- changed -->
-=======
-<!-- This is a new comment -->
->>>>>>> parent of f71ae47... message
-=======
-<!-- This is a new comment -->
->>>>>>> parent of f71ae47... message
-=======
-<!-- This is a new comment -->
->>>>>>> parent of f71ae47... message
-<!-- This is another new comment -->
->>>>>>> color
-    
+<!--another comment here 3rd one -->
 
     <br>
     <br>
