--- a/index.html
+++ b/index.html
@@ -30,22 +30,14 @@
         This is my own creation of a bootstrap card-body
     </div>
 
-    <div class='card' style='width:300px;margin:auto;'>
+    <div id='firebase-card' class='card' style='width:300px;margin:auto;'>
       <div class='card-header' style='background: gray;color: white;'>
         header
       </div>
       <div class='card-body'>
-      <div class='card-text'>this is a bootstrap card</div>
-      <div class='btn btn-primary' id='firebaseButton'>firebase!!</div>
-
+      <div id='firebase-card-text' class='card-text'>this is a bootstrap card</div>
       </div>
     </div>
-
-
-<!-- This is a new comment -->
-<!-- other one changed -->
-<!--another comment here 3rd one -->
-
 
     <br>
     <br>
