--- a/index.html
+++ b/index.html
@@ -4,30 +4,17 @@
   <head>
     <meta charset="UTF-8">
     <title>Testing Grounds</title>
+    <link rel='stylesheet' href='style.css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <style>
-      #my-container{
-        margin: 100px auto;
-        width: 500px;
-        height: 400px;
-        border: 1px solid black;
-        border-radius: 10px;
-      }
-      #my-header{
-        border-top-left-radius: 6px;
-        border-top-right-radius: 6px;
-        height: 100px;
-        width: 100%;
-        background: black;
-      }
-    </style>
   </head>
   <body>
     <div id='my-container'>
       <div id='my-header'>
         header
       </div>
-        This is my own creation of a bootstrap card-body
+      <div id='my-body'>
+        This is my own creation of a bootstrap card
+      </div>
     </div>
 
     <div id='firebase-card' class='card' style='width:300px;margin:auto;'>
