--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </div>
     </div>
 
-    <div id='firebase-card' class='card' style='width:300px;margin:auto;'>
+    <div id='firebase-card' class='card' style='width:500px;margin:auto;'>
       <div class='card-header' style='background: gray;color: white;'>
-        header
+        This is a bootstrap card
       </div>
       <div class='card-body'>
       <div id='firebase-card-text' class='card-text'>this is a bootstrap card</div>
